--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h1 {
   font-weight: 800;
   line-height: 1;
   margin-bottom: 2rem;
+  padding-top: 6rem;
 }
 
 .wrapper {
@@ -83,7 +84,7 @@ h1 {
 }
 
 .landing p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin-bottom: 6rem;
 }
 
@@ -184,15 +185,20 @@ h1 {
 }
 
 .gallery {
-  padding: 5rem 0 6rem;
-  scroll-margin-top: 5px;
+  padding: 6rem 0 6rem;
+  scroll-margin-top: 10px;
 }
 
 .contact {
-  height: 80vh;
-  padding: 0 0 6rem;
+/*  height: 50vh;*/
+  padding: 6rem 0 0rem;
 }
 
+footer {
+  margin-top: 5rem;
+  background-color: red;
+  background-color: rgba(0, 0, 0, 0.030);
+}
 
 .about {
   height: 95vh;
@@ -213,6 +219,10 @@ h1 {
   color: #fff;
 }
 
+.copyright {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
 .arrow span {
   font-size: 12px;
 }
@@ -222,8 +232,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.5rem;
-  margin-bottom: 3rem;
+  font-size: 2rem;
 }
 
 .arrow {
@@ -251,13 +260,15 @@ h2 {
 }
 
 .about p {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .gallery .container-fluid {
   max-width: 1400px;
   margin: auto;
 }
+
+
 
 @media screen and (min-width: 768px) {
   h1 {
@@ -269,11 +280,24 @@ h2 {
   }
 
   .c-wrapper {
-    max-width: 600px;
+    max-width: 100%;
+  }
+
+  .about h2 {
+    margin-bottom: 3rem;
+  }
+
+  .gallery h2 {
+    margin-bottom: 3rem;
   }
 }
 
 @media screen and (min-width: 1024px) {
+
+  .c-wrapper {
+    max-width: 600px;
+  }
+
   h1 {
     font-size: 6.5rem;
   }
@@ -297,10 +321,25 @@ h1 span {
   display: block;
 }
 
+
+@media screen and (max-width: 350px) {
+  h1  {
+    font-size: 1.5rem !important;
+  }
+  .landing p {
+    font-size: 1rem;
+  }
+}
+
+
 @media screen and (max-width: 768px) {
   .landing .wrapper div {
     width: 100% !important;
     text-align: center;
+  }
+
+  h1  {
+    font-size: 2.5rem;
   }
 }
 
@@ -313,4 +352,5 @@ h1 span {
     margin: 0 -2rem;
     box-shadow: -1px 29px 10px -21px rgba(0, 0, 0, 0.24);
   }
+
 }
