--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ footer {
 }
 
 .copyright {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(0, 0, 0, 0.025) !important;
 }
 
 .arrow span {
